allowed arbaic/english to stack on mobile

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sharh",
+  "name": "Sharh App by Ummah Spot",
   "icons": [
     {
       "src": "favicon.ico",
