--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Sharh",
-  "name": "Sharh App by Ummah Spot",
+  "name": "The Sharh App by Ummah Spot",
   "icons": [
     {
       "src": "favicon.ico",
