--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1680.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "markdown-to-txt": "^2.0.1",
     "marked-react": "^2.0.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -39,7 +41,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "promoteUser": "node scripts/promoteUser.js"
-
   },
   "eslintConfig": {
     "extends": [
