--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked-react": "^2.0.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
