--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "stripe": "^16.2.0",
+    "tmp-promise": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
