--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
@@ -29,6 +30,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "openai": "^5.15.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
