--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Sharh Notes",
   "version": "1.0.0",
-  "description": "Clip text from any webpage directly to your Sharh notes",
+  "description": "Clip text and create flashcards from any webpage to your Sharh notes with spaced repetition",
   "permissions": [
     "activeTab",
     "storage",
@@ -10,8 +10,7 @@
   ],
   "host_permissions": [
     "https://sharhapp.com/*",
-    "https://app.ummahspot.com/*",
-    "http://localhost:*/*"
+    "https://app.ummahspot.com/*"
   ],
   "action": {
     "default_popup": "popup.html",
