--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.933.0",
     "@aws-sdk/client-sqs": "^3.934.0",
+    "@elastic/elasticsearch": "^8.19.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
