--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.933.0",
     "@aws-sdk/client-sqs": "^3.934.0",
-    "@elastic/elasticsearch": "^8.19.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google/genai": "^1.20.0",
+    "@opensearch-project/opensearch": "^3.5.1",
     "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
