--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google/genai": "^1.20.0",
     "@opensearch-project/opensearch": "^3.5.1",
     "@react-pdf/renderer": "^3.3.8",
+    "@sentry/node": "^10.32.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
